--- a/Chatting/Chatting.csproj
+++ b/Chatting/Chatting.csproj
@@ -65,7 +65,9 @@
   <ItemGroup>
     <Compile Include="AboutActivity.cs" />
     <Compile Include="AddPersonActivity.cs" />
+    <Compile Include="App.cs" />
     <Compile Include="DetailsActivity.cs" />
+    <Compile Include="LocationActivity.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="MessageActivity.cs" />
