--- a/Chatting/Chatting.csproj
+++ b/Chatting/Chatting.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Services\LocationServiceBinder.cs" />
     <Compile Include="Services\LocationServiceConnection.cs" />
     <Compile Include="Services\ServiceConnectedEventArgs.cs" />
+    <Compile Include="Services\ShakeToLaunchService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
