--- a/Chatting/Chatting.csproj
+++ b/Chatting/Chatting.csproj
@@ -66,6 +66,7 @@
     <Compile Include="AboutActivity.cs" />
     <Compile Include="AddPersonActivity.cs" />
     <Compile Include="App.cs" />
+    <Compile Include="CurrencyActivity.cs" />
     <Compile Include="DetailsActivity.cs" />
     <Compile Include="LocationActivity.cs" />
     <Compile Include="MainActivity.cs" />
@@ -119,6 +120,12 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="System.Data.SqlClient">
+      <Version>4.8.1</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Media">
       <Version>4.0.1.5</Version>
     </PackageReference>
@@ -179,6 +186,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\send.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\Currency.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
