--- a/Chatting/Chatting.csproj
+++ b/Chatting/Chatting.csproj
@@ -66,6 +66,8 @@
     <Compile Include="AboutActivity.cs" />
     <Compile Include="AddPersonActivity.cs" />
     <Compile Include="App.cs" />
+    <Compile Include="BitmapHelpers.cs" />
+    <Compile Include="CameraActivity.cs" />
     <Compile Include="CurrencyActivity.cs" />
     <Compile Include="DetailsActivity.cs" />
     <Compile Include="LocationActivity.cs" />
@@ -77,6 +79,7 @@
     <Compile Include="PeopleActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AcronymService.cs" />
     <Compile Include="Services\LocationService.cs" />
     <Compile Include="Services\LocationServiceBinder.cs" />
     <Compile Include="Services\LocationServiceConnection.cs" />
@@ -192,6 +195,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\people.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\Camera.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
