--- a/Chatting/Chatting.csproj
+++ b/Chatting/Chatting.csproj
@@ -64,19 +64,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AboutActivity.cs" />
+    <Compile Include="AddContactActivity.cs" />
     <Compile Include="AddPersonActivity.cs" />
     <Compile Include="App.cs" />
     <Compile Include="BitmapHelpers.cs" />
     <Compile Include="CameraActivity.cs" />
     <Compile Include="CurrencyActivity.cs" />
+    <Compile Include="denemeActivity.cs" />
     <Compile Include="DetailsActivity.cs" />
+    <Compile Include="FileAccessHelper.cs" />
     <Compile Include="LocationActivity.cs" />
     <Compile Include="MainActivity.cs" />
-    <Compile Include="Message.cs" />
+    <Compile Include="MessageListViewAdaptor.cs" />
+    <Compile Include="MesssageDatabaseLayer.cs" />
+    <Compile Include="Models\Message.cs" />
     <Compile Include="MessageActivity.cs" />
-    <Compile Include="MessageData.cs" />
-    <Compile Include="People.cs" />
+    <Compile Include="Models\MessageData.cs" />
+    <Compile Include="Models\Msg.cs" />
+    <Compile Include="Models\MsgData.cs" />
+    <Compile Include="Models\People.cs" />
+    <Compile Include="Models\Person.cs" />
+    <Compile Include="MsgActivity.cs" />
     <Compile Include="PeopleActivity.cs" />
+    <Compile Include="PersonDatabasLayer.cs" />
+    <Compile Include="PersonListViewAdapter.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AcronymService.cs" />
@@ -125,6 +136,15 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.6.292</Version>
+    </PackageReference>
+    <PackageReference Include="SQLite.Net-PCL">
+      <Version>3.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="SQLiteNetExtensions">
+      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="System.Data.SqlClient">
       <Version>4.8.1</Version>
@@ -198,6 +218,18 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Camera.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\PersonList.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\AddContact.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\Msg.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\MessageList.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
